# FSP_full

./: .gitignore  .gitmodules  README.md  docker-compose.yaml  prometheus.yml
model/: .gitignore  SROIE2019.dvc  baseline.ipynb  easyocr_dataset.dvc  experiments.ipynb  inference.py  prepate_data.py  preprocess_dataset.py  processed_sroie.dvc  pyproject.toml
model/mlruns/1/: meta.yaml
model/mlruns/1/0e65b2fe608f4be6a2ed8174b19e2de5/: meta.yaml
model/mlruns/1/0e65b2fe608f4be6a2ed8174b19e2de5/metrics/: Macro_F1  Macro_precision  Macro_recall  Mean_CER  company_CER  company_F1  company_Precision  company_Recall  date_CER  date_F1  date_Precision  date_Recall  total_CER  total_F1  total_Precision  total_Recall
model/mlruns/1/0e65b2fe608f4be6a2ed8174b19e2de5/tags/: mlflow.source.git.commit
model/mlruns/1/13550ae93d834c51831e872c07a4740f/: meta.yaml
model/mlruns/1/13550ae93d834c51831e872c07a4740f/metrics/: Macro_F1  Macro_precision  Macro_recall  Mean_CER  company_CER  company_F1  company_Precision  company_Recall  date_CER  date_F1  date_Precision  date_Recall  total_CER  total_F1  total_Precision  total_Recall
model/mlruns/1/13550ae93d834c51831e872c07a4740f/tags/: mlflow.runName
model/mlruns/1/89d165b0af0448ecbd484319b72d2f2e/: meta.yaml
model/mlruns/1/89d165b0af0448ecbd484319b72d2f2e/metrics/: Macro_F1  Macro_precision  Macro_recall  Mean_CER  company_CER  company_F1  company_Precision  date_CER  (+8 more)
model/mlruns/1/d200d0ee4f0f4072a0ff31be3a853b58/: meta.yaml
model/mlruns/1/fb51a3b1d4b04229859e343ca2276994/: meta.yaml
model/my_network/: custom_sroie.yaml
(+51 files in other folders)
